* fixed small disalignment in the footer * Changed the divs in header and the footer to actual header and footer elements. * Cleanup in the css code.

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,30 +1,20 @@
-.footer {
+footer {
   display: flex;
-  align-items: center;
   width: 100%;
   height: 8rem;
   justify-content: space-between;
+  align-items: center;
   padding: 0 1rem;
   row-gap: 1rem;
 }
-.footerLogo {
-  height: 2rem;
-  width: auto;
-  object-fit: cover;
-  transition: 0.15s;
-}
-.linksContainer > p:hover {
-  color: #49a1f0;
-  cursor: pointer;
+.linksContainer {
+  display: flex;
+  gap: 1rem;
 }
 .footerLinks {
   display: flex;
   flex-direction: column;
   gap: 0.3rem;
-}
-.footerLinks > p:hover {
-  color: #49a1f0;
-  cursor: pointer;
 }
 .socialMediaContainer {
   display: flex;
@@ -47,7 +37,7 @@
   }
 }
 @media (max-width: 768px) {
-  .footer {
+  footer {
     flex-direction: column;
     height: auto;
     align-items: center;
@@ -71,5 +61,9 @@
     display: flex;
     justify-content: center;
     width: 100%;
+  }
+  .linksContainer {
+    flex-direction: column;
+    gap: 1rem;
   }
 }
